--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,6 +2,6 @@ project:
   type: website
 
 website:
-  title: "<TITLE>"
-  site-url: https://<YOUR_GITHUB_USERNAME>.github.io/<NAME_OF_REPOSITORY
-  description: "<DESCRIPTION>"
+  title: "Open Research Conversation - Open Scholarship Communities"
+  site-url: https://ns-rse.github.io/open-research-conversation-2023-11
+  description: "Slides for a talk at University of Sheffield Open Research Conversation 2023-11-29"
